UI:  Replace ico files with png
ico files weren't rendering properly under every circumstance for
whatever reason.

--- a/obs/forms/obs.qrc
+++ b/obs/forms/obs.qrc
@@ -1,17 +1,12 @@
 <RCC>
   <qresource prefix="res">
-    <file>images/add.ico</file>
-    <file>images/delete.ico</file>
-    <file>images/document-properties-2.png</file>
-    <file>images/down.ico</file>
-    <file>images/editscene.ico</file>
-    <file>images/list_add.png</file>
     <file>images/list_remove.png</file>
-    <file>images/live.ico</file>
-    <file>images/properties.ico</file>
-    <file>images/sound.ico</file>
-    <file>images/sound_muted.ico</file>
-    <file>images/up.ico</file>
+    <file>images/add.png</file>
+    <file>images/down.png</file>
+    <file>images/editscene.png</file>
+    <file>images/live.png</file>
+    <file>images/properties.png</file>
+    <file>images/up.png</file>
   </qresource>
   <qresource prefix="settings">
     <file>images/settings/network.png</file>
