--- a/obs/forms/OBSBasic.ui
+++ b/obs/forms/OBSBasic.ui
@@ -322,7 +322,7 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>148</width>
+               <width>233</width>
                <height>16</height>
               </rect>
              </property>
@@ -436,7 +436,7 @@
      <x>0</x>
      <y>0</y>
      <width>927</width>
-     <height>22</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -456,7 +456,7 @@
   <action name="actionAddScene">
    <property name="icon">
     <iconset resource="obs.qrc">
-     <normaloff>:/res/images/add.ico</normaloff>:/res/images/add.ico</iconset>
+     <normaloff>:/res/images/add.png</normaloff>:/res/images/add.png</iconset>
    </property>
    <property name="text">
     <string>Add</string>
@@ -465,7 +465,7 @@
   <action name="actionAddSource">
    <property name="icon">
     <iconset resource="obs.qrc">
-     <normaloff>:/res/images/add.ico</normaloff>:/res/images/add.ico</iconset>
+     <normaloff>:/res/images/add.png</normaloff>:/res/images/add.png</iconset>
    </property>
    <property name="text">
     <string>Add</string>
@@ -495,7 +495,7 @@
    </property>
    <property name="icon">
     <iconset resource="obs.qrc">
-     <normaloff>:/res/images/properties.ico</normaloff>:/res/images/properties.ico</iconset>
+     <normaloff>:/res/images/properties.png</normaloff>:/res/images/properties.png</iconset>
    </property>
    <property name="text">
     <string>Properties</string>
@@ -507,7 +507,7 @@
    </property>
    <property name="icon">
     <iconset resource="obs.qrc">
-     <normaloff>:/res/images/properties.ico</normaloff>:/res/images/properties.ico</iconset>
+     <normaloff>:/res/images/properties.png</normaloff>:/res/images/properties.png</iconset>
    </property>
    <property name="text">
     <string>Properties</string>
@@ -519,7 +519,7 @@
    </property>
    <property name="icon">
     <iconset resource="obs.qrc">
-     <normaloff>:/res/images/up.ico</normaloff>:/res/images/up.ico</iconset>
+     <normaloff>:/res/images/up.png</normaloff>:/res/images/up.png</iconset>
    </property>
    <property name="text">
     <string>Basic.Main.MoveUp</string>
@@ -527,11 +527,11 @@
   </action>
   <action name="actionSourceUp">
    <property name="enabled">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="icon">
     <iconset resource="obs.qrc">
-     <normaloff>:/res/images/up.ico</normaloff>:/res/images/up.ico</iconset>
+     <normaloff>:/res/images/up.png</normaloff>:/res/images/up.png</iconset>
    </property>
    <property name="text">
     <string>MoveUp</string>
@@ -543,7 +543,7 @@
    </property>
    <property name="icon">
     <iconset resource="obs.qrc">
-     <normaloff>:/res/images/down.ico</normaloff>:/res/images/down.ico</iconset>
+     <normaloff>:/res/images/down.png</normaloff>:/res/images/down.png</iconset>
    </property>
    <property name="text">
     <string>Basic.Main.MoveDown</string>
@@ -551,11 +551,11 @@
   </action>
   <action name="actionSourceDown">
    <property name="enabled">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="icon">
     <iconset resource="obs.qrc">
-     <normaloff>:/res/images/down.ico</normaloff>:/res/images/down.ico</iconset>
+     <normaloff>:/res/images/down.png</normaloff>:/res/images/down.png</iconset>
    </property>
    <property name="text">
     <string>MoveDown</string>
