--- a/obs/forms/OBSBasic.ui
+++ b/obs/forms/OBSBasic.ui
@@ -454,7 +454,7 @@
     <addaction name="separator"/>
     <addaction name="action_Settings"/>
     <addaction name="separator"/>
-    <addaction name="actionE_xit"/>
+    <addaction name="action_Exit"/>
    </widget>
    <widget class="QMenu" name="menuBasic_MainMenu_Help">
     <property name="title">
@@ -644,7 +644,7 @@
     <string>Basic.MainMenu.File.Settings</string>
    </property>
   </action>
-  <action name="actionE_xit">
+  <action name="action_Exit">
    <property name="text">
     <string>Basic.MainMenu.File.Exit</string>
    </property>
@@ -793,7 +793,7 @@
  </resources>
  <connections>
   <connection>
-   <sender>actionE_xit</sender>
+   <sender>action_Exit</sender>
    <signal>triggered()</signal>
    <receiver>OBSBasic</receiver>
    <slot>close()</slot>
