--- a/obs/forms/OBSBasic.ui
+++ b/obs/forms/OBSBasic.ui
@@ -456,6 +456,8 @@
     <addaction name="action_Save"/>
     <addaction name="action_Open"/>
     <addaction name="separator"/>
+    <addaction name="actionShow_Recordings"/>
+    <addaction name="separator"/>
     <addaction name="action_Settings"/>
     <addaction name="separator"/>
     <addaction name="actionE_xit"/>
@@ -641,6 +643,11 @@
   <action name="action_Save">
    <property name="text">
     <string>Basic.MainMenu.File.Import</string>
+   </property>
+  </action>
+  <action name="actionShow_Recordings">
+   <property name="text">
+    <string>Basic.MainMenu.File.ShowRecordings</string>
    </property>
   </action>
   <action name="action_Settings">
